<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">驾考助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="confrim">确定</string>
    <string name="cancel">取消</string>

    <!-- main -->
    <string name="second_subject">科目二 训练</string>
    <string name="third_subject">科目三 训练</string>
    <string name="criteria">评\n判\n标\n准</string>
    <string name="about">关于我们</string>
    <string name="second_criteria_title">科目二 评判标准</string>
    <string name="third_criteria_title">科目三 评判标准</string>
    
    <string name="third_subject_loading">正在读取路线...</string>
    <string name="third_subject_empty">暂无路线，请添加</string>
    <string name="third_subject_setting">科目三 设置</string>
    <string name="third_subject_setting_new">设置新路线</string>
    <string name="third_subject_setting_new_line_title">科目三 新建路线</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    
    <string name="gps">GPS</string>
    <string name="speed_limit">车速限制</string>
    <string name="search_radius">搜索半径</string>
    <string name="sensitivity">灵敏度</string>
    <string name="gps_searching">正在搜索...</string>
    <string name="gps_res" formatted="false">经度:%1s,纬度:%2s</string>
    
    <string name="start">设置为考试起点</string>
    <string name="add_item">设置为语音播报点</string>
    <string name="new_subject_name">%s号线</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    
    <string name="night_driving">模拟夜考灯光</string>
    <string name="speed">车速：%skm/h</string>
    <string name="distance">项目距离：%s</string>
    <string name="angle">偏转角度：%s°</string>
    
    <string name="start_test">开始测试</string>
    <string name="deduction_name">项目名称</string>
    <string name="deduction_reason">扣分原因</string>
    <string name="deduction_scores">扣分值</string>
    
    <string name="deduction_message">未按语音指令选择正确的行驶方向</string>
    

    <!-- 顺序应与assets second下文件一致 -->
    <string-array name="second_subject">
        <item>侧方停车</item>
        <item>倒车入库</item>
        <item>模拟高速</item>
        <item>模拟急弯连续山区路</item>
        <item>拟湿滑路</item>
        <item>模拟隧道</item>
        <item>模拟雨雾天</item>
        <item>模拟窄路掉头</item>
        <item>模拟障碍物</item>
        <item>坡道定点停车和起步</item>
        <item>起伏路</item>
        <item>曲线行驶</item>
        <item>停车收费</item>
        <item>通过单边桥</item>
        <item>通过连续障碍</item>
        <item>桩考</item>
    </string-array>
    
    <string name="third_criteria">上车准备：不绕车一周检查车辆外观及安全状况。-100\n
          打开车门前不观察后方交通情况。   -100
起步：车门未关闭起步。-100
      启动发动机时，变速器操纵杆未置于空挡（驻车挡）。  -100
      发动机启动后，不及时松开启动开关。   -10
      不松驻车制动器起步，但能及时纠正。   -10
      道路交通情况复杂时起步不能合理使用喇叭。 -5
      起步时车辆发生闯动。      -5
      起步时，加速踏板控制不当，致使发动机转速过高。     -5
      起步前不使用转向灯。     -10
      起步前，开转向灯少于3秒即转向。     -10
      起步挂错挡。            -10
      起步时车辆后溜距离大于30厘米。      -100
      起步时车辆后溜，但后溜距离小于30厘米。    -10
      起步操作步骤不正确（没给油）。        -10
      起步前，未观察内、外后视镜，未侧头观察后方交通情况。   -100
      不松驻车制动器起步，未及时纠正。    -100
3、变更车道：连续变更两条以上车道。    -100
             未按语音指令变更车道。    -100
             变更车道前不使用转向灯。   -10
             变更车道前，开转向灯少于3秒即转向。     -10
             变更车道前，未通过内、外后视镜观察后方道路交通情况。     -100
             变更车道时，判断车辆安全距离不合理，妨碍其他车辆正常行驶。   -100
             争道抢行，妨碍其他车辆正常行驶。     -100
4、通过路口：未按语音指令选择正确的行驶方向。     -100
            转向前不使用转向灯。       -10
            转向前，开转向灯少于3秒即转向。      -10
            不按交通信号灯行驶。       -100
            不按路口交通标线行驶。     -100
            不按规定减速或停车瞭望。    -100
            不观察左、右方交通情况，转弯通过路口时，未观察侧前方交通情况。   -100
            遇有路口交通阻塞时进入路口，将车辆停在路口内等候。        -100
            通过路口前未减速慢行。      -100
5、通过人行横道线：不按规定减速慢行。      -100
                   遇行人通过人行横道不停车让行。     -100
                   不观察左、右方交通情况。     -100
                   通过急弯、坡路、拱桥、人行横道或者没有交通信号灯控制的路口时，不交替使用远近光灯示意。          -100
6、通过学校区域：不按规定减速慢行。      -100
                 不观察左、右方交通情况。     -100
                 未停车礼让行人。           -100
7、通过公共汽车站：不按规定减速慢行。      -100
                 不观察左、右方交通情况。     -100
                 未停车礼让行人。           -100
8、超车：超车时机选择不合理，影响其他车辆正常行驶。   -100
         超车后急转向驶回本车道，妨碍被超车辆正常行驶。    -100
         从右侧超车。            -100
         未按语音指令在规定的距离内超车。       -100
         超车前不使用转向灯。      -10
         超车前，开转向灯少于3秒即转向。       -10
         超车前不通过内、外后视镜观察后方和左侧交通情况。      -100
         超车时机选择不合理，影响其他车辆正常行驶。       -100
         超车时，未侧头观察被超越车辆动态。        -100
         超车时未与被超越车辆保持安全距离。        -100
         连续变更两条以上车道。         -100
9、会车：在没有中心隔离设施或者中心线的道路上会车时，不减速靠右行驶，或未与其他车辆、行人、非机动车保持安全距离。      -100
         会车困难时不让行。         -100
         横向安全间距判断差，紧急转向避让对方来车。      -100
10、掉头：掉头地点选择不当。       -100
          未按语音指令在规定的距离内掉头。             -100
          掉头前不使用转向灯。       -10
          掉头前，开转向灯少于3秒即转向。     -10
          不能正确观察交通情况选择掉头时机。    -100
          掉头时，妨碍正常行驶的其他车辆和行人通行。     -100
          不得在黄实线，禁止掉头的位置掉头。       -100
11、靠边停车：停车后，车身超过或者骑压道路右侧边缘线或者人行道边缘。   -100
             停车后，车身距离道路右侧边缘线或者人行道边缘大于30厘米。   -10
             停车后，未拉紧驻车制动器。      -10
             拉紧驻车制动器前放松行车制动踏板。     -10
             下车后不关车门。        -10
             下车前不将发动机熄火。     -10
             夜间在路边临时停车不关闭前照灯或不开启警示灯。      -100
             未按语音指令在规定的距离内停车。         -100
             停车前不使用转向灯。        -10
             停车前，开转向灯少于3秒即转向。       -10
             制动不平顺。        -10
             停车前，不通过内、外后视镜观察后方和右侧交通情况。      -100
12、直线行驶：方向控制不稳，不能保持车辆直线运动状态。     -100
             不了解车辆行驶速度。           -100
             不适时通过内、外后视镜观察后方交通情况。      -100
             
13、模拟夜间行驶：夜间通过急弯\坡路\拱桥\人行横道\或没有交通信号灯控制的路口：交替使用远近光灯
           夜间在道路上发生故障或交通事故妨碍交通又难以移动：大灯改为示宽灯+双跳
           夜间在窄路窄桥与非机动车会车: 近光灯
夜间在没有路灯照明不良条件下行驶: 大灯开启
      雾天行驶: 雾灯+双跳灯+大灯开启
在刚才同样条件下紧跟前车行驶: 近光灯
    与对方会车,距对方来车将近150米: 近光灯
14、实际夜间考试：夜间考试起步前应开启前照灯。
                  夜间在通过急弯、坡路、拱桥、人行横道或者没有交通信号灯控制的路口时，应交替使用远、近光灯示意。
                  夜间在路口转弯时，不得使用远光灯。
                  夜间在有路灯、照明良好的道路上行驶时，不得使用远光灯。
15、加减挡位操作：未按指令平稳加、减挡。      -100
                  车辆运行速度和挡位不匹配。   -10
                  1挡位时车速过高。（应车速控制在25 KM/h以内）   -10
                  2挡位时车速过高。（应车速控制在35 KM/h以内）   -10
3挡位时车速过高。（不能超过50KM/h）   -10
3挡位时车速过低。（不能低于16KM/h）   -10
4挡位时车速过低。（不能低于20KM/h）   -10
5挡位时车速过低。（不能低于25KM/h）   -10
16、其他注意事项：长时间骑轧车道分界线行驶。（50M）      -100
                  不能骑轧黄线。          -100
                  不能在白实线变道。      -100
                  不可以长时间踩离合器行驶。          -10
                  不可以长时间开转向灯。（300M）      -10
                  考试中要最少要使用4档或以上档位行驶一段
考试中要最少要行驶一次35KM/h,并且保持这种状态连续3秒以上。
                  1挡100米，2挡200米内必须换挡。
                  注意观察道路限速标记，使车辆在道路所限制车速内行驶。</string>

</resources>