<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/deduction_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/deduction_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/deduction_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/deduction_reason"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/deduction_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/deduction_scores"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>